chore: GraphQL federation working with inline fragments
