# catalog-service/core/src/main/java/io/github/spring/middleware/catalog/domain/ProductType.java
@@ -1,0 +1,7 @@
+package io.github.spring.middleware.catalog.domain;
+
+public enum ProductType {
+
+    PHYSICAL,
+    DIGITAL
+}
