# catalog-service/core/src/main/java/io/github/spring/middleware/catalog/dto/graphql/CatalogDigitalProductInput.java
@@ -1,0 +1,22 @@
+package io.github.spring.middleware.catalog.dto.graphql;
+
+import io.github.spring.middleware.catalog.domain.ProductStatus;
+import lombok.Data;
+
+import java.math.BigDecimal;
+import java.net.URI;
+
+@Data
+public class CatalogDigitalProductInput {
+
+    private String name;
+    private String description;
+    private String sku;
+    private ProductStatus status;
+    private BigDecimal priceAmount;
+    private String priceCurrency;
+    private Long fileSize;
+    private String fileFormat;
+    private URI downloadUrl;
+}
+
