# catalog-service/core/src/main/java/io/github/spring/middleware/catalog/entity/ProductIdWithType.java
@@ -1,0 +1,9 @@
+package io.github.spring.middleware.catalog.entity;
+
+import io.github.spring.middleware.catalog.domain.ProductType;
+
+import java.util.UUID;
+
+
+public record ProductIdWithType(UUID productId, ProductType productType) {
+}
